# exemplo-apache-kafka

./: README.md  docker-compose.yml  pyproject.toml
admin/: criar_topico.py
banco/: consumer.py  producer.py
batch/: consumer_batch.py  producer_batch.py
database/: consumer_database.py
streaming/: consumer.py  producer.py
streaming_several_topics/: consumer_several_topics.py  producer_several_topics.py
topic/: delete_topic.py  list_topic.py  messages_topic.py
